deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ravi-app
  name: ravi-app
  namespace: ravi-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ravi-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ravi-app
    spec:
      containers:
      - image: rbhogara/test-app:v01
        name: test-app
        ports:
        - containerPort: 80
        resources: {}
        imagePullPolicy: always
status: {}
