ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ravi-test-ingress
  namespace: ravi-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: ravi-app.ashutoshh.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ravi-internal-lb
            port:
              number: 80
